[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/characters/player/32 x 32 platform character_hurt_0.png" type="Texture" id=1]
[ext_resource path="res://assets/items/Cut Ruby.png" type="Texture" id=2]
[ext_resource path="res://assets/items/Leather.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Vintagio-13.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.0784314 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.0784314 )
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.536429, 0.933594, 0.33551, 1 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.172714, 0.645833, 0.902344, 1 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.0784314 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.0784314 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="GUIWrapper" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 42.0
rect_min_size = Vector2( 620, 32 )
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="PlayerStat" type="HBoxContainer" parent="GUIWrapper"]
margin_right = 134.0
margin_bottom = 32.0
rect_min_size = Vector2( 132, 32 )
size_flags_horizontal = 12
custom_constants/separation = -2

[node name="Panel" type="Panel" parent="GUIWrapper/PlayerStat"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 11 )

[node name="Char" type="TextureRect" parent="GUIWrapper/PlayerStat/Panel"]
margin_top = 1.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true

[node name="StatContainer" type="MarginContainer" parent="GUIWrapper/PlayerStat"]
margin_left = 30.0
margin_right = 134.0
margin_bottom = 32.0
custom_constants/margin_top = 6
custom_constants/margin_bottom = 6

[node name="Panel" type="Panel" parent="GUIWrapper/PlayerStat/StatContainer"]
margin_top = 6.0
margin_right = 104.0
margin_bottom = 26.0
rect_min_size = Vector2( 104, 16 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUIWrapper/PlayerStat/StatContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 0, 12 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2
alignment = 1

[node name="HealthBar" type="TextureProgress" parent="GUIWrapper/PlayerStat/StatContainer/Panel/VBoxContainer"]
margin_right = 100.0
margin_bottom = 5.0
rect_min_size = Vector2( 100, 5 )
size_flags_horizontal = 3
size_flags_vertical = 3
value = 45.0
texture_progress = SubResource( 13 )
nine_patch_stretch = true

[node name="StaminaBar" type="TextureProgress" parent="GUIWrapper/PlayerStat/StatContainer/Panel/VBoxContainer"]
margin_top = 7.0
margin_right = 100.0
margin_bottom = 12.0
rect_min_size = Vector2( 100, 5 )
size_flags_horizontal = 3
size_flags_vertical = 3
value = 34.0
texture_progress = SubResource( 15 )
nine_patch_stretch = true

[node name="ObjectivesStat" type="Panel" parent="GUIWrapper"]
margin_left = 240.0
margin_right = 320.0
margin_bottom = 32.0
rect_min_size = Vector2( 80, 32 )
size_flags_horizontal = 6
custom_styles/panel = SubResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUIWrapper/ObjectivesStat"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="GUIWrapper/ObjectivesStat/HBoxContainer"]
margin_left = 18.0
margin_top = 8.0
margin_right = 34.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true

[node name="DoneObjectives" type="Label" parent="GUIWrapper/ObjectivesStat/HBoxContainer"]
margin_left = 38.0
margin_top = 5.0
margin_right = 42.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.141176, 0.0980392, 0.254902, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="Separator" type="Label" parent="GUIWrapper/ObjectivesStat/HBoxContainer"]
margin_left = 46.0
margin_top = 5.0
margin_right = 50.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.141176, 0.0980392, 0.254902, 1 )
custom_fonts/font = ExtResource( 4 )
text = "/"

[node name="TotalObjectives" type="Label" parent="GUIWrapper/ObjectivesStat/HBoxContainer"]
margin_left = 54.0
margin_top = 5.0
margin_right = 62.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.141176, 0.0980392, 0.254902, 1 )
custom_fonts/font = ExtResource( 4 )
text = "10"

[node name="ItemsStat" type="Panel" parent="GUIWrapper"]
margin_left = 484.0
margin_right = 620.0
margin_bottom = 32.0
rect_min_size = Vector2( 136, 32 )
size_flags_horizontal = 10
size_flags_vertical = 8
custom_styles/panel = SubResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUIWrapper/ItemsStat"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 1

[node name="MarginContainer" type="HBoxContainer" parent="GUIWrapper/ItemsStat/HBoxContainer"]
margin_right = 68.0
margin_bottom = 32.0
size_flags_horizontal = 3
alignment = 1

[node name="RupeeTexture" type="TextureRect" parent="GUIWrapper/ItemsStat/HBoxContainer/MarginContainer"]
margin_left = 18.0
margin_top = 8.0
margin_right = 34.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="GUIWrapper/ItemsStat/HBoxContainer/MarginContainer"]
margin_left = 38.0
margin_top = 5.0
margin_right = 50.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "999"

[node name="MarginContainer2" type="HBoxContainer" parent="GUIWrapper/ItemsStat/HBoxContainer"]
margin_left = 68.0
margin_right = 136.0
margin_bottom = 32.0
size_flags_horizontal = 3
alignment = 1

[node name="RubyTexture" type="TextureRect" parent="GUIWrapper/ItemsStat/HBoxContainer/MarginContainer2"]
margin_left = 18.0
margin_top = 8.0
margin_right = 34.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="GUIWrapper/ItemsStat/HBoxContainer/MarginContainer2"]
margin_left = 38.0
margin_top = 5.0
margin_right = 50.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.101961, 0.0313726, 0.184314, 1 )
custom_fonts/font = ExtResource( 4 )
text = "999"
align = 1
valign = 1
